--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Sistema de Gestión de Servicios Públicos - Optimizado para gestión de energía, acueducto y gas.">
+  <meta name="description" content="Sistema oficial de la Policía Metropolitana de Bucaramanga para gestión presupuestal de servicios públicos: energía, acueducto y gas.">
   <title>Sistema de Gestión de Servicios Públicos</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -8465,5 +8465,22 @@ input.search-bar {
 	  });
 	});
   </script>
+  <!-- Contenido visible para Google (indexación SEO) -->
+	<main style="display:block; opacity:0; height:0; overflow:hidden;">
+		<h1>Servicios Públicos GUBIR MEBUC</h1>
+		<p>
+			Plataforma institucional de Servicios Públicos GUBIR MEBUC. 
+			Sistema de consulta, análisis, estadísticas y gestión de servicios públicos 
+			(energía, acueducto y gas) para las unidades MEBUC, DESAN, DEMAM y SETRA.
+		</p>
+
+		<h2>Módulos principales</h2>
+		<ul>
+		  <li>Control de saldos presupuestales</li>
+		  <li>Búsqueda inteligente de predios</li>
+		  <li>Estadísticas y análisis gráfico</li>
+		  <li>Reportes de novedades y comparaciones analíticas</li>
+		</ul>
+	</main>
 </body>
 </html>
