--- a/index.html
+++ b/index.html
@@ -8465,11 +8465,11 @@ input.search-bar {
 	  });
 	});
   </script>
-  <!-- Contenido visible para Google (indexación SEO) -->
-	<main style="display:block; opacity:0; height:0; overflow:hidden;">
-		<h1>Servicios Públicos GUBIR MEBUC</h1>
+	<!-- Contenido SEO para Google -->
+	  <main style="display:block; opacity:0; height:0; overflow:hidden;">
+		<h1>Servicios Públicos GUBIRME BUC</h1>
 		<p>
-			Plataforma institucional de Servicios Públicos GUBIR MEBUC. 
+			Plataforma institucional de Servicios Públicos GUBIRME BUC. 
 			Sistema de consulta, análisis, estadísticas y gestión de servicios públicos 
 			(energía, acueducto y gas) para las unidades MEBUC, DESAN, DEMAM y SETRA.
 		</p>
@@ -8481,6 +8481,6 @@ input.search-bar {
 		  <li>Estadísticas y análisis gráfico</li>
 		  <li>Reportes de novedades y comparaciones analíticas</li>
 		</ul>
-	</main>
+	  </main>
 </body>
 </html>
